player height on safari fixed

--- a/tipo-2/css/player.css
+++ b/tipo-2/css/player.css
@@ -38,6 +38,7 @@
   aspect-ratio: 16 / 9;
   width: calc(100% - 30px);
   transform: translate(-50%, 0%);
+  height: 100%;
 }
 
 .first-layer{
